--- a/packages/neotracker-build/package.json
+++ b/packages/neotracker-build/package.json
@@ -22,7 +22,8 @@
     "@neo-one/node-esnext-esm": "^2.3.0",
     "@neo-one/node-neo-settings-esnext-esm": "^2.3.0",
     "@neo-one/utils-esnext-esm": "^2.3.0",
-    "@neotracker/core": "^1.0.15",
+    "@neotracker/core": "^1.3.1",
+    "@neotracker/logger": "^1.0.0",
     "@neotracker/server-graphql": "^0.0.1-alpha.0",
     "@neotracker/server-utils": "^0.0.1-alpha.0",
     "@neotracker/server-web": "^0.0.1-alpha.0",
