make some changes to logging, deserves a revist

--- a/packages/neotracker-logger/package.json
+++ b/packages/neotracker-logger/package.json
@@ -9,8 +9,7 @@
   "main": "./src/index.ts",
   "dependencies": {
     "@types/pino": "^5.8.10",
-    "pino": "^5.13.2",
-    "pino-pretty": "^3.2.1"
+    "pino": "^5.13.2"
   },
   "sideEffects": false
 }
