--- a/packages/neotracker-server-web/package.json
+++ b/packages/neotracker-server-web/package.json
@@ -9,10 +9,10 @@
   "main": "./src/index.ts",
   "dependencies": {
     "@material-ui/core": "^3.7.1",
-    "@neo-one/client-core": "^2.3.0",
-    "@neo-one/client-common": "^2.3.0",
-    "@neo-one/client-switch": "^2.3.0",
-    "@neo-one/utils": "^2.3.0",
+    "@neo-one/client-core": "2.5.1-alpha-7",
+    "@neo-one/client-common": "2.5.1-alpha-7",
+    "@neo-one/client-switch": "2.5.1-alpha-7",
+    "@neo-one/utils": "^2.4.0",
     "@neotracker/logger": "^1.0.0",
     "@neotracker/server-db": "^0.0.1-alpha.0",
     "@neotracker/server-graphql": "^0.0.1-alpha.0",
