--- a/packages/neotracker-client-web/package.json
+++ b/packages/neotracker-client-web/package.json
@@ -9,10 +9,10 @@
   "main": "./src/index.ts",
   "dependencies": {
     "@babel/polyfill": "7.2.5",
-    "@neo-one/client-core": "^2.3.0",
-    "@neo-one/client-common": "^2.3.0",
-    "@neo-one/client-switch": "^2.3.0",
-    "@neo-one/utils": "^2.3.0",
+    "@neo-one/client-core": "2.5.1-alpha-7",
+    "@neo-one/client-common": "2.5.1-alpha-7",
+    "@neo-one/client-switch": "2.5.1-alpha-7",
+    "@neo-one/utils": "^2.4.0",
     "@neotracker/logger": "^1.0.0",
     "@neotracker/shared-graphql": "^0.0.1-alpha.0",
     "@neotracker/shared-utils": "^0.0.1-alpha.0",
