--- a/packages/neotracker-server-scrape-check/package.json
+++ b/packages/neotracker-server-scrape-check/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "main": "./src/index.ts",
   "dependencies": {
-    "@neo-one/client-full": "^2.3.0",
+    "@neo-one/client-full": "2.5.1-alpha-7",
     "@neotracker/logger": "^1.0.0",
     "@neotracker/server-db": "^0.0.1-alpha.0",
     "@neotracker/shared-utils": "^0.0.1-alpha.0",
