--- a/packages/neotracker-shared-web-next/package.json
+++ b/packages/neotracker-shared-web-next/package.json
@@ -8,10 +8,10 @@
   "license": "MIT",
   "main": "./src/index.ts",
   "dependencies": {
-    "@neo-one/client-core": "^2.3.0",
-    "@neo-one/client-common": "^2.3.0",
-    "@neo-one/client-switch": "^2.3.0",
-    "@neo-one/utils": "^2.3.0",
+    "@neo-one/client-core": "2.5.1-alpha-7",
+    "@neo-one/client-common": "2.5.1-alpha-7",
+    "@neo-one/client-switch": "2.5.1-alpha-7",
+    "@neo-one/utils": "^2.4.0",
     "@neotracker/shared-utils": "0.0.1-alpha.0",
     "apollo-client": "^2.4.6",
     "graphql": "14.5.8",
