--- a/packages/neotracker-server-db/package.json
+++ b/packages/neotracker-server-db/package.json
@@ -1,17 +1,21 @@
 {
   "name": "@neotracker/server-db",
   "version": "0.0.1-alpha.0",
-  "keywords": ["neo", "blockchain", "neotracker"],
+  "keywords": [
+    "neo",
+    "blockchain",
+    "neotracker"
+  ],
   "description": "NEO Tracker db definitions.",
   "repository": "https://github.com/neotracker/neotracker",
   "bugs": "https://github.com/neotracker/neotracker/issues",
   "license": "MIT",
   "main": "./src/index.ts",
   "dependencies": {
-    "@neo-one/client-switch": "^2.3.0",
-    "@neo-one/node-core": "^2.3.0",
-    "@neo-one/node-neo-settings": "^2.3.0",
-    "@neo-one/utils": "^2.3.0",
+    "@neo-one/client-switch": "^2.4.0",
+    "@neo-one/node-core": "^2.4.0",
+    "@neo-one/node-neo-settings": "^2.4.0",
+    "@neo-one/utils": "^2.4.0",
     "@neotracker/logger": "^1.0.0",
     "@neotracker/server-utils": "^0.0.1-alpha.0",
     "@neotracker/shared-utils": "^0.0.1-alpha.0",
