--- a/packages/neotracker-server-utils/package.json
+++ b/packages/neotracker-server-utils/package.json
@@ -1,11 +1,7 @@
 {
   "name": "@neotracker/server-utils",
   "version": "0.0.1-alpha.0",
-  "keywords": [
-    "neo",
-    "blockchain",
-    "neotracker"
-  ],
+  "keywords": ["neo", "blockchain", "neotracker"],
   "description": "Utilities for server-side NEO Tracker.",
   "repository": "https://github.com/neotracker/neotracker",
   "bugs": "https://github.com/neotracker/neotracker/issues",
