feat(ci): Add ecosystem link check to ci

--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "babel-plugin-jest-hoist": "24.9.0",
     "babel-plugin-relay": "^1.7.0",
     "cross-env": "6.0.3",
+    "cross-fetch": "^3.0.0",
     "cypress": "3.5.0",
     "enzyme-adapter-react-16": "1.15.1",
     "enzyme-to-json": "3.4.3",
@@ -116,6 +117,7 @@
     "jest-junit": "9.0.0",
     "lerna": "3.18.3",
     "lint-staged": "9.4.2",
+    "lodash": "^4.17.11",
     "mocha": "5.2.0",
     "mocha-junit-reporter": "1.23.3",
     "mocha-multi-reporters": "1.1.7",
@@ -174,6 +176,7 @@
     "test:e2e-ci": "yarn run jest:ci --config jest/e2e-ci.js",
     "test:cypress": "yarn run ts-node ./packages/neotracker-server-test/src/cypress/run.ts",
     "test:cypress-ci": "yarn run test:cypress --ci",
+    "test:ecosystem-links": "cross-env TS_NODE_COMPILER_OPTIONS='{\"allowJs\": true}'  yarn run ts-node ./scripts/checkEcosystemLinks.ts",
     "tsc": "tsc",
     "flow": "flow",
     "ts-node": "cross-env NODE_OPTIONS=\"--max-old-space-size=8192 --no-warnings\" TS_NODE_PROJECT=tsconfig/tsconfig.es2018.cjs.json node -r ts-node/register/transpile-only",
