--- a/packages/neotracker-build/package.json
+++ b/packages/neotracker-build/package.json
@@ -16,12 +16,12 @@
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "@babel/types": "^7.2.2",
-    "@neo-one/client-esnext-esm": "^2.3.0",
-    "@neo-one/client-full-esnext-esm": "^2.3.0",
-    "@neo-one/node-core-esnext-esm": "^2.3.0",
-    "@neo-one/node-esnext-esm": "^2.3.0",
-    "@neo-one/node-neo-settings-esnext-esm": "^2.3.0",
-    "@neo-one/utils-esnext-esm": "^2.3.0",
+    "@neo-one/client": "^2.6.0",
+    "@neo-one/client-full": "^2.5.0",
+    "@neo-one/node-core": "^2.5.0",
+    "@neo-one/node": "^2.5.0",
+    "@neo-one/node-neo-settings": "^2.5.0",
+    "@neo-one/utils": "^2.5.0",
     "@neotracker/core": "^1.3.1",
     "@neotracker/logger": "^1.0.0",
     "@neotracker/server-graphql": "^0.0.1-alpha.0",
