--- a/packages/neotracker-server-graphql/package.json
+++ b/packages/neotracker-server-graphql/package.json
@@ -1,19 +1,14 @@
 {
   "name": "@neotracker/server-graphql",
   "version": "0.0.1-alpha.0",
-  "keywords": [
-    "neo",
-    "blockchain",
-    "neotracker"
-  ],
+  "keywords": ["neo", "blockchain", "neotracker"],
   "description": "NEO Tracker graphql.",
   "repository": "https://github.com/neotracker/neotracker",
   "bugs": "https://github.com/neotracker/neotracker/issues",
   "license": "MIT",
   "main": "./src/index.ts",
   "dependencies": {
-    "@neo-one/client-switch": "^2.4.0",
-    "@neo-one/utils": "^2.4.0",
+    "@neo-one/utils": "^2.5.0",
     "@neotracker/logger": "^1.0.0",
     "@neotracker/server-db": "^0.0.1-alpha.0",
     "@neotracker/server-utils": "^0.0.1-alpha.0",
