--- a/packages/neotracker-server-scrape/package.json
+++ b/packages/neotracker-server-scrape/package.json
@@ -1,20 +1,15 @@
 {
   "name": "@neotracker/server-scrape",
   "version": "0.0.1-alpha.0",
-  "keywords": [
-    "neo",
-    "blockchain",
-    "neotracker"
-  ],
+  "keywords": ["neo", "blockchain", "neotracker"],
   "description": "NEO Tracker scraper.",
   "repository": "https://github.com/neotracker/neotracker",
   "bugs": "https://github.com/neotracker/neotracker/issues",
   "license": "MIT",
   "main": "./src/index.ts",
   "dependencies": {
-    "@neo-one/client-full": "^2.4.0",
-    "@neo-one/client-switch": "^2.4.0",
-    "@neo-one/utils": "^2.4.0",
+    "@neo-one/client-full": "^2.5.0",
+    "@neo-one/utils": "^2.5.0",
     "@neotracker/logger": "^1.0.0",
     "@neotracker/server-db": "^0.0.1-alpha.0",
     "@neotracker/shared-utils": "^0.0.1-alpha.0",
