--- a/packages/neotracker-server-utils/package.json
+++ b/packages/neotracker-server-utils/package.json
@@ -1,18 +1,14 @@
 {
   "name": "@neotracker/server-utils",
   "version": "0.0.1-alpha.0",
-  "keywords": [
-    "neo",
-    "blockchain",
-    "neotracker"
-  ],
+  "keywords": ["neo", "blockchain", "neotracker"],
   "description": "Utilities for server-side NEO Tracker.",
   "repository": "https://github.com/neotracker/neotracker",
   "bugs": "https://github.com/neotracker/neotracker/issues",
   "license": "MIT",
   "main": "./src/index.ts",
   "dependencies": {
-    "@neo-one/utils": "^2.4.0",
+    "@neo-one/utils": "^2.5.0",
     "@neotracker/logger": "^1.0.0",
     "@neotracker/shared-utils": "^0.0.1-alpha.0",
     "@types/is-running": "^2.1.0",
