--- a/packages/neotracker-shared-web-next/package.json
+++ b/packages/neotracker-shared-web-next/package.json
@@ -1,21 +1,16 @@
 {
   "name": "@neotracker/shared-web-next",
   "version": "0.0.1-alpha.0",
-  "keywords": [
-    "neo",
-    "blockchain",
-    "neotracker"
-  ],
+  "keywords": ["neo", "blockchain", "neotracker"],
   "description": "NEO Tracker shared web code.",
   "repository": "https://github.com/neotracker/neotracker",
   "bugs": "https://github.com/neotracker/neotracker/issues",
   "license": "MIT",
   "main": "./src/index.ts",
   "dependencies": {
-    "@neo-one/client-common": "^2.4.0",
-    "@neo-one/client-core": "^2.4.0",
-    "@neo-one/client-switch": "^2.4.0",
-    "@neo-one/utils": "^2.4.0",
+    "@neo-one/client-common": "^2.6.0",
+    "@neo-one/client-core": "^2.6.0",
+    "@neo-one/utils": "^2.5.0",
     "@neotracker/shared-utils": "0.0.1-alpha.0",
     "apollo-client": "^2.4.6",
     "graphql": "14.5.8",
