--- a/packages/neotracker-server-graphql/package.json
+++ b/packages/neotracker-server-graphql/package.json
@@ -26,6 +26,7 @@
     "graphql-tools": "^4.0.3",
     "iterall": "^1.2.2",
     "lodash": "^4.17.11",
+    "lru-cache": "^4.1.1",
     "objection": "^1.4.0",
     "relay-compiler": "1.6.2",
     "relay-runtime": "1.6.2",
